# password

./: .gitignore  CMakeLists.txt  README.md  encryption.go  encryption_test.go  file.go  file_test.go  go.mod  go.sum  manager.go  manager_test.go  password.go  password_test.go  storage.go  storage_test.go  temporary.go  temporary_test.go
.github/workflows/: cmake.yml  go.yml  release.yml
cinterface/: cinterface.go
cmake/: installConfig.cmake.in  install_license.cmake  install_targets.cmake  licenseConfig.in  read_version.cmake  target_autodoc.cmake  target_license.cmake
cmd/decrypt/: main.go
cmd/encrypt/: main.go
cmd/exampleservice/: .gitignore  main.go
cmd/patchheader/: main.go
cmd/recovery/: main.go
docs/: README.md  cinterface.md  log.md  msvc.md  multiple.md  password.md  recovery.md  rest.md
log/: log.go
rest/: access.go  access_test.go  multi.go  multi_test.go  simple.go  simple_test.go
tests/cinterface/: CMakeLists.txt  TestPassword.cpp  TestPassword.h  TestRest.cpp  TestRest.h  TestStorage.cpp  TestStorage.h  main.cpp
